<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Número de Telefone"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />

    <CheckBox
        android:id="@+id/concordo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Concordo com os termos"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/telefone"
        app:layout_constraintTop_toBottomOf="@+id/telefone" />

    <Button
        android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Enviar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/telefone"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/telefone"
        app:layout_constraintTop_toBottomOf="@+id/concordo" />

    <TextView
        android:id="@+id/avisoTele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Nome inválido!"
        android:textColor="#FF2626"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/telefone"
        app:layout_constraintStart_toStartOf="@+id/telefone" />

</androidx.constraintlayout.widget.ConstraintLayout>